Thu Nov 27 10:51:00 UTC 2003  Don Hinton  <dhinton@dresystems.com>

        * tao/RTPortableServer/Makefile:
          Moved -lTAO -lACE to after the other libs in ACE_SHLIBS.

Wed Nov 26 21:54:59 2003  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/be/be_visitor_traits.cpp (visit_array):

          Added missing code to mark node as visited to prevent
          repeated code generation, for example if the array is
          typedef'd, we want to prevent the underlying type from
          generating the same code when it is visited again.

Wed Nov 26 19:15:11 2003  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* orbsvcs/orbsvcs/Fault_Tolerance.dsp:

	  Added missing libraries for linking.

Wed Nov 26 17:26:24 2003  Jeff Parsons <j.parsons@vanderbilt.edu>

        * tests/AMI/ami_test.idl:
        * tests/AMI/ami_test_i.cpp:
        * tests/AMI/ami_test_i.h:

          Added an operation to the IDL file, and to the implementation
          class, that contains an INOUT parameter. No call is made to
          this operation by the client, it is there to catch a
          possible recurrence of a bug recently fixed, in which
          incorrect code was generated for INOUT args in sendc-*
          operations.

Wed Nov 26 16:29:13 2003  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/be/be_visitor_interface/interface_cs.cpp:

          Cosmetic changes.

        * TAO_IDL/be/be_visitor_traits.cpp:
        * TAO_IDL/be/be_visitor_array/array_ci.cpp:
        * TAO_IDL/be_include/be_visitor_traits.h:

          Added code generation for a declaration of the TAO::Array_Traits
          template specialization implemented in the *C.i file. This
          is apparently required by BCB6 when inlining is turned off,
          since the memory management methods in the traits class are
          needed by the *S.cpp file, and *C.i is not included in *C.h.
          Thanks to Johnny Willemsen <jwillemsen@remedy.nl> for