@@ -22,8 +22,8 @@
 
 #include "ami_testS.h"
 
-ACE_RCSID (AMI, 
-           simple_client, 
+ACE_RCSID (AMI,
+           simple_client,
            "$Id$")
 
 const char *ior = "file://test.ior";
@@ -150,6 +150,21 @@ public:
                   "Callback method <set_yadda_excep> called: \n"));
     };
 
+  void inout_arg_test (
+      const char *
+      ACE_ENV_ARG_DECL_NOT_USED
+      )
+    ACE_THROW_SPEC ((CORBA::SystemException))
+  {
+    ACE_DEBUG ((LM_DEBUG,
+                "Callback method <set_yadda_excep> called: \n"));
+  }
+
+  void inout_arg_test_excep (A::AMI_AMI_TestExceptionHolder *
+                             ACE_ENV_ARG_DECL_NOT_USED)
+    ACE_THROW_SPEC ((CORBA::SystemException))
+  {
+  }
 };
 
 int
