@@ -1,3 +1,10 @@
+Thu Nov 27 08:55:48 2003  Balachandran Natarajan  <bala@dre.vanderbilt.edu>
+
+	* tests/AMI/client.cpp:
+	* tests/AMI/simple_client.cpp:
+	  
+	  Fixed compile errors with g++.
+
 Thu Nov 27 10:51:00 UTC 2003  Don Hinton  <dhinton@dresystems.com>
 
         * tao/RTPortableServer/Makefile:
